# mpo

./: CMakeCache.txt  CMakeLists.txt  Doxyfile  Makefile  cmake_install.cmake  config_test  setting.ini
DesignEasy/DesignEasy/dlib/: README.txt  assert.h  float_details.h  image_processing.h  revision.h  serialize.h  simd.h
DesignEasy/DesignEasy/dlib/array2d/: array2d_kernel.h  array2d_kernel_abstract.h
DesignEasy/DesignEasy/dlib/bridge/: bridge.h
DesignEasy/DesignEasy/dlib/bsp/: bsp.h
DesignEasy/DesignEasy/dlib/data_io/: image_dataset_metadata.cpp  image_dataset_metadata.h  load_image_dataset.h  load_image_dataset_abstract.h
DesignEasy/DesignEasy/dlib/disjoint_subsets/: disjoint_subsets_abstract.h
DesignEasy/DesignEasy/dlib/geometry/: point_transforms.h  point_transforms_abstract.h  rectangle.h  rectangle_abstract.h
DesignEasy/DesignEasy/dlib/graph_cuts/: find_max_factor_graph_potts.h  find_max_factor_graph_potts_abstract.h  min_cut.h
DesignEasy/DesignEasy/dlib/graph_utils/: edge_list_graphs.h
DesignEasy/DesignEasy/dlib/gui_widgets/: widgets.cpp  widgets.h
DesignEasy/DesignEasy/dlib/image_loader/: png_loader.h  png_loader_abstract.h
DesignEasy/DesignEasy/dlib/image_processing/: box_overlap_testing.h  box_overlap_testing_abstract.h  frontal_face_detector.h  frontal_face_detector_abstract.h  object_detector.h  object_detector_abstract.h  remove_unobtainable_rectangles.h  remove_unobtainable_rectangles_abstract.h  scan_fhog_pyramid.h  scan_fhog_pyramid_abstract.h  scan_image_boxes.h  scan_image_boxes_abstract.h  scan_image_custom.h  scan_image_custom_abstract.h  scan_image_pyramid.h  scan_image_pyramid_abstract.h  scan_image_pyramid_tools.h  scan_image_pyramid_tools_abstract.h
DesignEasy/DesignEasy/dlib/image_transforms/: assign_image.h  assign_image_abstract.h  colormaps.h  colormaps_abstract.h  draw.h  draw_abstract.h  edge_detector.h  equalize_histogram.h  fhog.h  fhog_abstract.h  image_pyramid.h  image_pyramid_abstract.h  interpolation.h  interpolation_abstract.h  segment_image.h  segment_image_abstract.h  spatial_filtering.h  spatial_filtering_abstract.h
DesignEasy/DesignEasy/dlib/lsh/: create_random_projection_hash.h  create_random_projection_hash_abstract.h  projection_hash_abstract.h
DesignEasy/DesignEasy/dlib/matrix/: matrix_fft.h  matrix_la.h  matrix_mat.h  matrix_mat_abstract.h  matrix_subexp.h
DesignEasy/DesignEasy/dlib/misc_api/: misc_api_shared.h
DesignEasy/DesignEasy/dlib/optimization/: find_max_factor_graph_nmplp.h  find_max_factor_graph_nmplp_abstract.h  find_max_parse_cky.h  optimization.h  optimization.h~  optimization_abstract.h  optimization_bobyqa.h  optimization_bobyqa.h~  optimization_least_squares.h  optimization_line_search.h  optimization_line_search.h~  optimization_line_search_abstract.h  optimization_oca.h  optimization_oca_abstract.h  optimization_search_strategies.h~  optimization_trust_region.h
DesignEasy/DesignEasy/dlib/python/: boost_python_utils.h  numpy.h  numpy_image.h  pyassert.h  serialize_pickle.h
DesignEasy/DesignEasy/dlib/simd/: simd4f.h  simd4i.h  simd8f.h  simd8i.h  simd_check.h
DesignEasy/DesignEasy/dlib/statistics/: cca_abstract.h  vector_normalizer_frobmetric.h  vector_normalizer_frobmetric_abstract.h
DesignEasy/DesignEasy/dlib/svm/: assignment_function.h  assignment_function_abstract.h  cross_validate_multiclass_trainer.h  cross_validate_object_detection_trainer.h  cross_validate_object_detection_trainer_abstract.h  cross_validate_regression_trainer.h  cross_validate_track_association_trainer.h  (+40 more)
DesignEasy/DesignEasy/test/: test  test.cpp
examples/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  config_test.cpp  de_opt.cpp  math_opt.cpp  nrun.cpp  run.cpp  single.cpp  tester.cpp
exp_frame/: setting.ini  startup.sh
exp_frame/amp/dyn_2/: setting.ini
exp_frame/amp/origin/: setting.ini
exp_frame/amp/static_8/: setting.ini
exp_frame/amp3/dyn_8/: setting.ini
exp_frame/amp3/origin/: setting.ini
exp_frame/amp3/static_8/: setting.ini
exp_frame/bjt/dyn_2/: run.sh
exp_frame/bjt/dyn_4/: run.sh
exp_frame/bjt/dyn_8/: setting.ini
exp_frame/bjt/origin/: setting.ini
exp_frame/bjt/static_4/: de.ini
exp_frame/bjt/static_8/: setting.ini
exp_frame/branin/dyn_2/: setting.ini
exp_frame/branin/origin/: setting.ini
exp_frame/branin/static_8/: setting.ini
exp_frame/classE/dyn_2/: setting.ini
exp_frame/classE/origin/: setting.ini
exp_frame/classE/static_4/: setting.ini
exp_frame/mos3/dyn_2/: setting.ini
exp_frame/mos3/origin/: setting.ini
exp_frame/mos3/static_8/: setting.ini
exp_frame/mosfet/dyn_2/: setting.ini
exp_frame/mosfet/origin/: setting.ini
exp_frame/mosfet/static_8/: setting.ini
exp_frame/tristateio/dyn_2/: setting.ini
exp_frame/tristateio/origin/: setting.ini
exp_frame/tristateio/static_2/: setting.ini
problem/: de  license  startup.sh
problem/amp/: OptLis  OptMeas  OptOutfile  OptPara  amp.sp  de
problem/amp3/: clear.sh  n.typ  p.typ
problem/backup/a_pll_spice/: difference_HSPICE-ngspice  pll.sp  pll.st0
problem/backup/bandpass/: bandpass.sp
problem/backup/buck/: buck.cfg  buck.sp  config  dzcad-desktop.out  dzcad-desktop.sp  summary.txt
problem/bjt/: bjt.sp  config
problem/classE/: .nfs00000000051221aa00000eda  .nfs00000000051221ae00000edc  .nfs00000000051221b300000ed8  .nfs00000000051221b400000ed9  classE.sp  config
problem/math/: OptOutfile  OptPara  VarIn  clear.sh
problem/math/source/: AckleyConfig  MathTestbench.cpp  MathTestbench.hpp
problem/mos3/: config  de  mos3.sp
problem/mosfet/: config  mosfet.sp
problem/tristateio/: DesignEasy  config  tristateio.sp
src/: benchmark.cpp  benchmark.hpp  comm.cpp  comm.hpp  config.cpp  config.hpp  dataset.cpp  dataset.hpp  dataset1.cpp  dataset1.hpp  deplugin.cpp  deplugin.hpp  eigen_serial.h  main.cpp  master1.cpp  master1.hpp  node.cpp  node.hpp  optbase.cpp  optbase.hpp  optbayes.cpp  optbayes.hpp  optrrc.cpp  optrrc.hpp  progressbar.hpp  region.cpp  region.hpp  slave1.cpp  slave1.hpp  stats.cpp  stats.hpp  utils.cpp  utils.hpp
src/backup/: dataset.cpp  dataset.hpp
(+366 files in other folders)
